--- a/3/index.html
+++ b/3/index.html
@@ -39,13 +39,13 @@
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs text-center">
                         <li>
-                            <a href="#chicken-tile"><br class="hidden-xs"> Chicken</a>
+                            <a href="#chicken-tile"><br class="hidden-xs"> 1st para</a>
                         </li>
                         <li>
-                            <a href="#beef-tile"><br class="hidden-xs"> Beef</a>
+                            <a href="#beef-tile"><br class="hidden-xs"> 2nd Para</a>
                         </li>
                         <li>
-                            <a href="#sushi-tile"><br class="hidden-xs"> Sushi</a>
+                            <a href="#sushi-tile"><br class="hidden-xs"> 3rd Para</a>
                         </li>
                     </ul>
                 </div>
@@ -59,7 +59,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div id="chicken-tile">
                     <section>
-                        <h3 class="text-center">Chicken</h3>
+                        <h3 class="text-center">1st</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
                             sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
@@ -103,7 +103,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div id="beef-tile">
                     <section>
-                        <h3 class="text-center">Beef</h3>
+                        <h3 class="text-center">2nd</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
                             sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
@@ -153,7 +153,7 @@
             <div class="col-md-4 col-sm-12 col-xs-12">
                 <div id="sushi-tile">
                     <section>
-                        <h3 class="text-center">Sushi</h3>
+                        <h3 class="text-center">3rd</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
                             sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
